--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "NavoiyUS",
   "license": "ISC",
   "dependencies": {
-    "telegraf": "^4.15.3",
-    "dotenv": "^16.4.2",
+    "dotenv": "^16.4.4",
     "grammy": "^1.20.4",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "telegraf": "^4.15.3"
   }
 }
